Fixed visual bug (wrong color)

--- a/src/App/Overlay.css
+++ b/src/App/Overlay.css
@@ -276,9 +276,7 @@
 
 div.mdl-progress::after {
   display: block;
-  color: black;
   content: "Authenticating...";
-  /* font-family: inherit; */
   font-style: italic;
 
   margin: 20px auto;
